Fix Localization in Main.storyboard

--- a/Promesometro-iOS/Promesometro-iOS/View/Main.storyboard
+++ b/Promesometro-iOS/Promesometro-iOS/View/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="49e-Tb-3d3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="dXg-Cv-oqI">
     <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,67 +10,67 @@
     </dependencies>
     <scenes>
         <!--Promise Table View Controller-->
-        <scene sceneID="j4m-al-fC6">
+        <scene sceneID="74U-Ld-jMr">
             <objects>
-                <tableViewController id="aeg-go-XaZ" customClass="PromiseTableViewController" customModule="Promesometro_iOS" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="zAp-Xf-4PJ">
+                <tableViewController id="rFJ-0N-9w7" customClass="PromiseTableViewController" customModule="Promesometro_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Lwf-T4-zLI">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PromiseCell" id="AsZ-7Z-vgR">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PromiseCell" id="TvK-CT-6uH">
                                 <rect key="frame" x="0.0" y="28" width="414" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AsZ-7Z-vgR" id="Vkp-wh-LAD">
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TvK-CT-6uH" id="hFo-4L-C4j">
                                     <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                 </tableViewCellContentView>
                             </tableViewCell>
                         </prototypes>
                         <connections>
-                            <outlet property="dataSource" destination="aeg-go-XaZ" id="2VU-t1-kNP"/>
-                            <outlet property="delegate" destination="aeg-go-XaZ" id="g99-8O-8EM"/>
+                            <outlet property="dataSource" destination="rFJ-0N-9w7" id="A98-We-Oay"/>
+                            <outlet property="delegate" destination="rFJ-0N-9w7" id="a5r-3D-cHQ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="uXH-bB-PXU"/>
+                    <navigationItem key="navigationItem" id="ake-l6-aGP"/>
                 </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="lbx-Iv-qMr" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aID-of-Bqe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1747.826086956522" y="0.6696428571428571"/>
         </scene>
         <!--Tab Bar Controller-->
-        <scene sceneID="yl2-sM-qoP">
+        <scene sceneID="UBm-pd-KL4">
             <objects>
-                <tabBarController id="49e-Tb-3d3" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="W28-zg-YXA">
+                <tabBarController id="dXg-Cv-oqI" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="1Po-gp-ITs">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                     </tabBar>
                     <connections>
-                        <segue destination="oSu-wZ-deK" kind="relationship" relationship="viewControllers" id="1uB-nj-LL4"/>
+                        <segue destination="SMX-wy-QvL" kind="relationship" relationship="viewControllers" id="GYp-ju-tUE"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="HuB-VB-40B" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ueN-p0-nuY" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-20" y="1"/>
         </scene>
         <!--Promesas-->
-        <scene sceneID="2k7-NB-yvs">
+        <scene sceneID="eOB-TR-VgU">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="oSu-wZ-deK" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Promesas" image="first" id="MjD-ms-DGM"/>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SMX-wy-QvL" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Promesas" image="first" id="eAB-E0-hfb"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="rWH-yo-1w8">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HM4-Y6-LK6">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="aeg-go-XaZ" kind="relationship" relationship="rootViewController" id="sKf-94-cmq"/>
+                        <segue destination="rFJ-0N-9w7" kind="relationship" relationship="rootViewController" id="V6S-hj-AdP"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BbX-St-qym" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z7K-Q4-ffc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="837.68115942028987" y="0.6696428571428571"/>
         </scene>
