--- a/Promesometro-iOS/Promesometro-iOS/View/Main.storyboard
+++ b/Promesometro-iOS/Promesometro-iOS/View/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -32,11 +33,32 @@
                             <outlet property="delegate" destination="rFJ-0N-9w7" id="a5r-3D-cHQ"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="ake-l6-aGP"/>
+                    <navigationItem key="navigationItem" id="ake-l6-aGP">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="szH-Ag-COV">
+                            <connections>
+                                <segue destination="wtI-k4-Ukf" kind="show" id="bfW-ni-pt8"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aID-of-Bqe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1747.826086956522" y="0.6696428571428571"/>
+        </scene>
+        <!--Nueva Promesa-->
+        <scene sceneID="Fo7-Eh-lZx">
+            <objects>
+                <viewController title="Nueva Promesa" id="wtI-k4-Ukf" customClass="CreatePromiseViewController" customModule="Promesometro_iOS" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="g24-eE-FP5">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="kJA-at-UD6"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zB0-8p-8KF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2513" y="-544"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="UBm-pd-KL4">
