--- a/Promesometro-iOS/Promesometro-iOS/View/Main.storyboard
+++ b/Promesometro-iOS/Promesometro-iOS/View/Main.storyboard
@@ -6,96 +6,9 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
-        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Promise Table View Controller-->
-        <scene sceneID="74U-Ld-jMr">
-            <objects>
-                <tableViewController id="rFJ-0N-9w7" customClass="PromiseTableViewController" customModule="Promesometro_iOS" customModuleProvider="target" sceneMemberID="viewController">
-                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="Lwf-T4-zLI">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="PromiseCell" id="TvK-CT-6uH">
-                                <rect key="frame" x="0.0" y="28" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="TvK-CT-6uH" id="hFo-4L-C4j">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                        <connections>
-                            <outlet property="dataSource" destination="rFJ-0N-9w7" id="A98-We-Oay"/>
-                            <outlet property="delegate" destination="rFJ-0N-9w7" id="a5r-3D-cHQ"/>
-                        </connections>
-                    </tableView>
-                    <navigationItem key="navigationItem" id="ake-l6-aGP">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="szH-Ag-COV">
-                            <connections>
-                                <segue destination="wtI-k4-Ukf" kind="show" id="bfW-ni-pt8"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <segue destination="5hi-7n-D1g" kind="show" identifier="promiseDetail" id="ypg-DE-7zL"/>
-                    </connections>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aID-of-Bqe" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1747.826086956522" y="0.6696428571428571"/>
-        </scene>
-        <!--Promesa-->
-        <scene sceneID="Lzv-Qr-riD">
-            <objects>
-                <viewController title="Promesa" id="5hi-7n-D1g" customClass="PromiseDetailViewController" customModule="Promesometro_iOS" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="ALc-bG-2Dz">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="biH-2J-6dk">
-                                <rect key="frame" x="8" y="96" width="398" height="709"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <constraints>
-                            <constraint firstItem="sbe-Af-BbW" firstAttribute="trailing" secondItem="biH-2J-6dk" secondAttribute="trailing" constant="8" id="0hb-ud-oak"/>
-                            <constraint firstItem="sbe-Af-BbW" firstAttribute="bottom" secondItem="biH-2J-6dk" secondAttribute="bottom" constant="8" id="OX9-zn-lri"/>
-                            <constraint firstItem="biH-2J-6dk" firstAttribute="leading" secondItem="sbe-Af-BbW" secondAttribute="leading" constant="8" id="PpB-AE-dcZ"/>
-                            <constraint firstItem="biH-2J-6dk" firstAttribute="top" secondItem="sbe-Af-BbW" secondAttribute="top" constant="8" id="fWq-eT-pTN"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="sbe-Af-BbW"/>
-                    </view>
-                    <connections>
-                        <outlet property="textView" destination="biH-2J-6dk" id="Qcc-Zg-FjK"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="iHv-bZ-dKZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2518.840579710145" y="329.46428571428572"/>
-        </scene>
-        <!--Nueva Promesa-->
-        <scene sceneID="Fo7-Eh-lZx">
-            <objects>
-                <viewController title="Nueva Promesa" id="wtI-k4-Ukf" customClass="CreatePromiseViewController" customModule="Promesometro_iOS" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="g24-eE-FP5">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                        <viewLayoutGuide key="safeArea" id="kJA-at-UD6"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="zB0-8p-8KF" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2519" y="-328"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="UBm-pd-KL4">
             <objects>
@@ -107,15 +20,17 @@
                     </tabBar>
                     <connections>
                         <segue destination="SMX-wy-QvL" kind="relationship" relationship="viewControllers" id="GYp-ju-tUE"/>
+                        <segue destination="SDT-nI-0n9" kind="relationship" relationship="viewControllers" id="wM7-1i-JA5"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ueN-p0-nuY" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-20" y="1"/>
+            <point key="canvasLocation" x="70" y="550"/>
         </scene>
         <!--Promesas-->
         <scene sceneID="eOB-TR-VgU">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z7K-Q4-ffc" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SMX-wy-QvL" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Promesas" image="first" id="eAB-E0-hfb"/>
                     <toolbarItems/>
@@ -125,15 +40,54 @@
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="rFJ-0N-9w7" kind="relationship" relationship="rootViewController" id="V6S-hj-AdP"/>
+                        <segue destination="dtr-Wz-bWk" kind="relationship" relationship="rootViewController" id="V6S-hj-AdP"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Z7K-Q4-ffc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="837.68115942028987" y="0.6696428571428571"/>
+            <point key="canvasLocation" x="838" y="214"/>
+        </scene>
+        <!--Promises-->
+        <scene sceneID="Hyt-Gn-Sft">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Promises" id="dtr-Wz-bWk" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="seX-EL-3tl"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="59z-Kd-mef" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1681" y="214"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="dYr-hW-HRw">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SDT-nI-0n9" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" image="second" id="i5a-UT-feJ"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uWn-wd-cLr">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="qy2-V8-g0x" kind="relationship" relationship="rootViewController" id="UBy-F9-ysx"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="89l-C3-RIP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="838" y="895"/>
+        </scene>
+        <!--Parties-->
+        <scene sceneID="DLh-sz-J35">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Parties" id="qy2-V8-g0x" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="GIv-UE-Xzd"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="YQe-Vi-EMV" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1683" y="895"/>
         </scene>
     </scenes>
     <resources>
         <image name="first" width="30" height="30"/>
+        <image name="second" width="30" height="30"/>
     </resources>
 </document>
