--- a/Promesometro-iOS/Promesometro-iOS/View/Parties.storyboard
+++ b/Promesometro-iOS/Promesometro-iOS/View/Parties.storyboard
@@ -9,10 +9,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Table View Controller-->
+        <!--Parties Table View Controller-->
         <scene sceneID="DS8-Wi-TSB">
             <objects>
-                <tableViewController id="UE3-Di-IZE" sceneMemberID="viewController">
+                <tableViewController id="UE3-Di-IZE" customClass="PartiesTableViewController" customModule="Promesometro_iOS" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="dmT-5f-o2o">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
