--- a/Promesometro-iOS/Promesometro-iOS/View/Main.storyboard
+++ b/Promesometro-iOS/Promesometro-iOS/View/Main.storyboard
@@ -6,13 +6,14 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Tab Bar Controller-->
+        <!--Animated Tab Bar Controller-->
         <scene sceneID="UBm-pd-KL4">
             <objects>
-                <tabBarController id="dXg-Cv-oqI" sceneMemberID="viewController">
+                <tabBarController id="dXg-Cv-oqI" customClass="RAMAnimatedTabBarController" customModule="RAMAnimatedTabBarController" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="1Po-gp-ITs">
                         <rect key="frame" x="0.0" y="975" width="768" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -21,18 +22,22 @@
                     <connections>
                         <segue destination="SMX-wy-QvL" kind="relationship" relationship="viewControllers" id="GYp-ju-tUE"/>
                         <segue destination="SDT-nI-0n9" kind="relationship" relationship="viewControllers" id="wM7-1i-JA5"/>
+                        <segue destination="vFh-7a-rH4" kind="relationship" relationship="viewControllers" id="oLF-Q9-zdg"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ueN-p0-nuY" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="70" y="550"/>
+            <point key="canvasLocation" x="-1217" y="214"/>
         </scene>
         <!--Promesas-->
         <scene sceneID="eOB-TR-VgU">
             <objects>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="Z7K-Q4-ffc" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SMX-wy-QvL" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Promesas" image="first" id="eAB-E0-hfb"/>
+                    <tabBarItem key="tabBarItem" title="Promesas" image="handShake" id="eAB-E0-hfb" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
+                        <connections>
+                            <outlet property="animation" destination="2CN-W8-F0d" id="Abv-uV-DuK"/>
+                        </connections>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="HM4-Y6-LK6">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -43,8 +48,14 @@
                         <segue destination="dtr-Wz-bWk" kind="relationship" relationship="rootViewController" id="V6S-hj-AdP"/>
                     </connections>
                 </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z7K-Q4-ffc" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="2CN-W8-F0d" customClass="RAMBounceAnimation" customModule="RAMAnimatedTabBarController">
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="isDeselectAnimation" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                </customObject>
             </objects>
-            <point key="canvasLocation" x="838" y="214"/>
+            <point key="canvasLocation" x="-2301" y="951"/>
         </scene>
         <!--Promises-->
         <scene sceneID="Hyt-Gn-Sft">
@@ -54,13 +65,38 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="59z-Kd-mef" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1681" y="214"/>
+            <point key="canvasLocation" x="-2301" y="1492"/>
         </scene>
-        <!--Item-->
+        <!--Perfil-->
+        <scene sceneID="7YK-1B-YR5">
+            <objects>
+                <viewController id="vFh-7a-rH4" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="MqV-X5-kwc">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="grV-cd-yaW"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Perfil" image="user" id="1DP-cB-Geq" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
+                        <connections>
+                            <outlet property="animation" destination="uEh-SN-2Uu" id="Fx8-nY-soT"/>
+                        </connections>
+                    </tabBarItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TUL-1f-tjP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="uEh-SN-2Uu" customClass="RAMRotationAnimation" customModule="RAMAnimatedTabBarController"/>
+            </objects>
+            <point key="canvasLocation" x="-78" y="951"/>
+        </scene>
+        <!--Partidos-->
         <scene sceneID="dYr-hW-HRw">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="SDT-nI-0n9" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" image="second" id="i5a-UT-feJ"/>
+                    <tabBarItem key="tabBarItem" title="Partidos" image="drop" id="i5a-UT-feJ" customClass="RAMAnimatedTabBarItem" customModule="RAMAnimatedTabBarController">
+                        <connections>
+                            <outlet property="animation" destination="Rdn-7f-oUs" id="FlA-qc-HeE"/>
+                        </connections>
+                    </tabBarItem>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="uWn-wd-cLr">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
@@ -72,8 +108,15 @@
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="89l-C3-RIP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <customObject id="Rdn-7f-oUs" customClass="RAMFlipBottomTransitionItemAnimations" customModule="RAMAnimatedTabBarController">
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="color" keyPath="iconSelectedColor">
+                            <color key="value" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        </userDefinedRuntimeAttribute>
+                    </userDefinedRuntimeAttributes>
+                </customObject>
             </objects>
-            <point key="canvasLocation" x="838" y="895"/>
+            <point key="canvasLocation" x="-1217" y="951"/>
         </scene>
         <!--Parties-->
         <scene sceneID="DLh-sz-J35">
@@ -83,11 +126,12 @@
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YQe-Vi-EMV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1683" y="895"/>
+            <point key="canvasLocation" x="-1217" y="1492"/>
         </scene>
     </scenes>
     <resources>
-        <image name="first" width="30" height="30"/>
-        <image name="second" width="30" height="30"/>
+        <image name="drop" width="24" height="24"/>
+        <image name="handShake" width="36" height="36"/>
+        <image name="user" width="30" height="30"/>
     </resources>
 </document>
